--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Loop studios</title>
 </head>
 <body>
     <!-- HeroSection -->
